# lab4_pirv

./: CMakeLists.txt  brightness.cu  brightness.hpp  main.cpp  vector_add.cu  vector_add.hpp
